--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ script:
 deploy:
   provider: pypi
   user: __token__
-  password:
-    secure: $PYPI_TOKEN
+  password: $PYPI_TOKEN
   on:
     branch: master
